--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 
-	Open Manager, an open source file manager for the Android system
+    Open Manager, an open source file manager for the Android system
     Copyright (C) 2009, 2010, 2011  Joe Berria <nexesdevelopment@gmail.com>
 
     This program is free software: you can redistribute it and/or modify
@@ -15,81 +15,99 @@
 
     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
- -->
+-->
  
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.nexes.manager"
-      android:versionCode="218"
-      android:versionName="2.1.8"
-      android:installLocation="auto">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" 
-    			 android:debuggable="true">
-    			 
-    	
-    	<activity android:name=".Settings" android:label="@string/app_name" />		 
-    	<activity android:name=".ProcessManager" android:label="@string/manager_act" />
-	    <activity android:name=".WirelessManager" android:label="Wireless Information" />
-	    <activity android:name=".ApplicationBackup" android:label="Installed Applications" />
-	    
-        <activity android:name=".Main"
-                  android:label="@string/app_name">
+    package="com.slim.filemanager"
+    android:versionCode="100"
+    android:versionName="1.0.0"
+    android:installLocation="auto">
+
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name"
+        android:debuggable="true">
+
+        <activity
+            android:name=".Settings"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".ProcessManager"
+            android:label="@string/manager_act" />
+        <activity
+            android:name=".WirelessManager"
+            android:label="Wireless Information" />
+        <activity
+            android:name=".ApplicationBackup"
+            android:label="Installed Applications" />
+        <activity
+            android:name=".Main"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             <intent-filter>
-            	<action android:name="android.intent.action.GET_CONTENT" />
-            	<data android:mimeType="*/*" />
-            	<category android:name="android.intent.category.OPENABLE" />
-            	<category android:name="android.intent.category.DEFAULT" />
+                <action android:name="android.intent.action.GET_CONTENT" />
+                <data android:mimeType="*/*" />
+                <category android:name="android.intent.category.OPENABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-	    
-	    <activity android:name=".AudioPlayblack"
-	    		  android:label="@string/media_dialog"
-	    		  android:theme="@android:style/Theme.Dialog" />
-	    
-	    <activity android:name=".DirectoryInfo" android:enabled="true"
-	    		  android:label="@string/dir_info">
-	    	<intent-filter>
-	    		<action android:name="android.intent.action.VIEW" />
-	    		<data android:mimeType="application/manager" />
-	    		<category android:name="android.intent.category.DEFAULT" />
-	    	</intent-filter>
-	    </activity>
-	    
-	    <activity android:name=".HelpManager"
-	    		  android:label="About Open Manager"
-	    		  android:theme="@android:style/Theme.Dialog" />
 
-<!-- 	 widget   		  
-	    <activity android:name=".AppWidgetConfigureActivity">
-	    	<intent-filter>
-	    		<action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
-	    	</intent-filter>
-	    </activity>
-	    		  
-	  	<receiver android:name=".FolderWidgetProvider">
-	  		<intent-filter>
-	  			<action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-	  		</intent-filter>
-	  		<meta-data android:name="android.appwidget.provider"
-	  				   android:resource="@xml/folder_widget_info" />
-	  	</receiver>
--->       
-</application>
-	<supports-screens android:smallScreens="true"
-					  android:normalScreens="true"
-					  android:largeScreens="true" />
-    <uses-sdk android:minSdkVersion="4"
-    		  android:maxSdkVersion="10"/>
-    		  
+        <activity
+            android:name=".AudioPlayblack"
+            android:label="@string/media_dialog"
+            android:theme="@android:style/Theme.Dialog" />
+        <activity
+            android:name=".DirectoryInfo"
+            android:enabled="true"
+            android:label="@string/dir_info">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <data android:mimeType="application/manager" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".HelpManager"
+            android:label="@string/about"
+            android:theme="@android:style/Theme.Dialog" />
+
+        <!-- widget
+        <activity
+            android:name=".AppWidgetConfigureActivity">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>
+            </intent-filter>
+        </activity>
+
+        <receiver
+            android:name=".FolderWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider" android:resource="@xml/folder_widget_info" />
+        </receiver>
+-->
+
+    </application>
+
+    <supports-screens
+        android:smallScreens="true"
+        android:normalScreens="true"
+        android:largeScreens="true" />
+
+    <uses-sdk android:minSdkVersion="4" android:maxSdkVersion="17"/>
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    
-<!-- uncomment this in order to allow wifi information displayed
-<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
- -->
- 
-</manifest> 
 
+<!-- uncomment this in order to allow wifi information displayed
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+
+-->
+
+</manifest>
