--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -42,7 +42,8 @@
             android:label="Installed Applications" />
         <activity
             android:name=".Main"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -99,7 +100,7 @@
         android:normalScreens="true"
         android:largeScreens="true" />
 
-    <uses-sdk android:minSdkVersion="4" android:maxSdkVersion="17"/>
+    <uses-sdk android:minSdkVersion="14" android:maxSdkVersion="17"/>
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
