--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,14 +16,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:screenOrientation="portrait"
         android:theme="@style/AppBaseTheme"
         android:windowSoftInputMode="adjustPan" >
         <activity
             android:name=".Main"
-            android:label="@string/app_name"
             android:launchMode="singleTop"
             android:uiOptions="splitActionBarWhenNarrow" >
             <intent-filter>
