--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -54,7 +54,7 @@
         <activity
             android:name=".InfoDialog"
             android:label="@string/details"
-            android:theme="@android:style/Theme.Holo.Light.Dialog" >
+            android:theme="@style/AppBaseTheme1" >
         </activity>
         <activity
             android:name=".Settings"
