--- a/project.config
+++ b/project.config
@@ -1,7 +1,7 @@
 [project]
 	description = Slim Filemanager
 [access]
-	inheritFrom = All-Projects
+	inheritFrom = Slim-Packages
 [access "refs/*"]
 	owner = group user/Nicholas Flintham (Flinny)
 [access "refs/for/refs/*"]
