--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ android {
             proguardFiles 'proguard-android.txt'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 dependencies {
@@ -28,6 +32,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile "org.androidannotations:androidannotations-api:3.3.2"
     compile 'com.jcraft:jsch:0.1.52'
+
+    compile 'org.apache.commons:commons-compress:1.6'
+    compile group: 'commons-io', name: 'commons-io', version: '2.4'
 
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1'
