Start using TabPageIndicator

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         </activity>
 
         <activity android:name="com.slim.turboeditor.activity.MainActivity"
+            android:label="@string/text_editor"
             android:launchMode="singleTop"
             android:windowSoftInputMode="stateUnspecified|adjustResize"
             android:theme="@style/AppTheme.Dark">
@@ -42,45 +43,45 @@
                 <data android:scheme="file" />
                 <data android:mimeType="*/*" />
                 <data android:host="*" />
-                <data android:pathPattern=".*\\.txt" />
-                <data android:pathPattern=".*\\.html" />
-                <data android:pathPattern=".*\\.xml" />
-                <data android:pathPattern=".*\\.css" />
-                <data android:pathPattern=".*\\.js" />
-                <data android:pathPattern=".*\\.md"/>
-                <data android:pathPattern=".*\\.markdown"/>
-                <data android:pathPattern=".*\\.php" />
-                <data android:pathPattern=".*\\.py" />
-                <data android:pathPattern=".*\\.script" />
-                <data android:pathPattern=".*\\.cs" />
-                <data android:pathPattern=".*\\.java" />
-                <data android:pathPattern=".*\\.rb" />
-                <data android:pathPattern=".*\\.aspx" />
-                <data android:pathPattern=".*\\.cshtml" />
-                <data android:pathPattern=".*\\.vbhtml" />
-                <data android:pathPattern=".*\\.go" />
-                <data android:pathPattern=".*\\.c" />
-                <data android:pathPattern=".*\\.h" />
-                <data android:pathPattern=".*\\.cc" />
-                <data android:pathPattern=".*\\.cpp" />
-                <data android:pathPattern=".*\\.hh" />
-                <data android:pathPattern=".*\\.hpp" />
-                <data android:pathPattern=".*\\.pl" />
-                <data android:pathPattern=".*\\.pm" />
-                <data android:pathPattern=".*\\.t" />
-                <data android:pathPattern=".*\\.pod" />
-                <data android:pathPattern=".*\\.m" />
-                <data android:pathPattern=".*\\.f" />
-                <data android:pathPattern=".*\\.for" />
-                <data android:pathPattern=".*\\.f90" />
-                <data android:pathPattern=".*\\.f95" />
-                <data android:pathPattern=".*\\.asp" />
-                <data android:pathPattern=".*\\.json" />
-                <data android:pathPattern=".*\\.wiki" />
-                <data android:pathPattern=".*\\.lua" />
-                <data android:pathPattern=".*\\.r" />
-                <data android:pathPattern=".*\\.key" />
-                <data android:pathPattern=".*\\.log" />
+                <data android:pathPattern="/.*\\.txt" />
+                <data android:pathPattern="/.*\\.html" />
+                <data android:pathPattern="/.*\\.xml" />
+                <data android:pathPattern="/.*\\.css" />
+                <data android:pathPattern="/.*\\.js" />
+                <data android:pathPattern="/.*\\.md"/>
+                <data android:pathPattern="/.*\\.markdown"/>
+                <data android:pathPattern="/.*\\.php" />
+                <data android:pathPattern="/.*\\.py" />
+                <data android:pathPattern="/.*\\.script" />
+                <data android:pathPattern="/.*\\.cs" />
+                <data android:pathPattern="/.*\\.java" />
+                <data android:pathPattern="/.*\\.rb" />
+                <data android:pathPattern="/.*\\.aspx" />
+                <data android:pathPattern="/.*\\.cshtml" />
+                <data android:pathPattern="/.*\\.vbhtml" />
+                <data android:pathPattern="/.*\\.go" />
+                <data android:pathPattern="/.*\\.c" />
+                <data android:pathPattern="/.*\\.h" />
+                <data android:pathPattern="/.*\\.cc" />
+                <data android:pathPattern="/.*\\.cpp" />
+                <data android:pathPattern="/.*\\.hh" />
+                <data android:pathPattern="/.*\\.hpp" />
+                <data android:pathPattern="/.*\\.pl" />
+                <data android:pathPattern="/.*\\.pm" />
+                <data android:pathPattern="/.*\\.t" />
+                <data android:pathPattern="/.*\\.pod" />
+                <data android:pathPattern="/.*\\.m" />
+                <data android:pathPattern="/.*\\.f" />
+                <data android:pathPattern="/.*\\.for" />
+                <data android:pathPattern="/.*\\.f90" />
+                <data android:pathPattern="/.*\\.f95" />
+                <data android:pathPattern="/.*\\.asp" />
+                <data android:pathPattern="/.*\\.json" />
+                <data android:pathPattern="/.*\\.wiki" />
+                <data android:pathPattern="/.*\\.lua" />
+                <data android:pathPattern="/.*\\.r" />
+                <data android:pathPattern="/.*\\.key" />
+                <data android:pathPattern="/.*\\.log" />
             </intent-filter>
             <intent-filter >
                 <action android:name="android.intent.action.VIEW" />
