--- a/SlimFileManager/src/main/AndroidManifest.xml
+++ b/SlimFileManager/src/main/AndroidManifest.xml
@@ -7,11 +7,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".FileManagerApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher_home"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".FileManager"
             android:label="@string/app_name" >
@@ -31,8 +30,7 @@
         <activity android:name="com.slim.turboeditor.activity.MainActivity"
             android:label="@string/text_editor"
             android:launchMode="singleTop"
-            android:windowSoftInputMode="stateUnspecified|adjustResize"
-            android:theme="@style/AppTheme.Dark">
+            android:windowSoftInputMode="stateUnspecified|adjustResize">
 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
